Clean Architecture (#38)
* add mmd

* add

* refactor

* fix

* fix css

* fix qualifier

* fix controller test

* fix test (presenter)

* fix diagram

* fix gha action name