@@ -12,14 +12,15 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 
 import io.github.tttol.mrls.dto.GitLabMergeRequestApiResponseDto;
+import io.github.tttol.mrls.dto.RequestDto;
 import io.github.tttol.mrls.exception.GitLabApiException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-@Component
+@Component("gitlabApiExecutor")
 @RequiredArgsConstructor
 @Slf4j
-public class GitLabApiExecutor {
+public class GitLabApiExecutor implements IApiExecutor {
 
   private final RestClient restClient;
 
@@ -28,24 +29,45 @@ public class GitLabApiExecutor {
   @Value("${app.gitlab.project.accessToken}")
   private String projectAccessToken;
 
-  public List<GitLabMergeRequestApiResponseDto> getMergeRequests(String accessToken) {
+  @Override
+  public List<RequestDto> getRequests() {
     try {
-      var token = StringUtils.isNotBlank(accessToken) ? accessToken : projectAccessToken;
+      if (StringUtils.isBlank(projectAccessToken)) {
+        throw new GitLabApiException("projectAccessToken must not be blank.");
+      }
+      var token = projectAccessToken;
       var responseEntity = restClient.get()
           .uri(new URI(endpoint))
           .accept(MediaType.APPLICATION_JSON)
           .header("PRIVATE-TOKEN", token)
           .retrieve()
           .toEntity(GitLabMergeRequestApiResponseDto[].class);
-      
-      if (responseEntity != null) {
-        log.info("status code -> {}", responseEntity.getStatusCode());
-        var body = responseEntity.getBody();
-        return Objects.isNull(body) ? List.of() : Arrays.asList(body);
-      }
-      return List.of();
+
+      log.info("status code -> {}", responseEntity.getStatusCode());
+      var body = responseEntity.getBody();
+      return Objects.isNull(body) ? List.of() : convertToRequestDto(Arrays.asList(body));
     } catch (Exception e) {
       throw new GitLabApiException(e);
     }
+  }
+
+  /**
+   * Parsing into a list of {@link GitLabMergeRequestApiResponseDto} and then mapped to {@link RequestDto}.
+   *
+   * @return a list of {@link RequestDto}
+   */
+  private List<RequestDto> convertToRequestDto(final List<GitLabMergeRequestApiResponseDto> responseDtos) {
+    return responseDtos.stream()
+        .map(r -> new RequestDto(
+            r.getId(),
+            r.getTitle(),
+            r.getCreatedAt(),
+            r.getUpdatedAt(),
+            r.getUpvotes(),
+            r.getAuthor(),
+            r.getAssignee(),
+            r.getLabels(),
+            r.getWebUrl()))
+        .toList();
   }
 }
